# magic-filecache

./: LICENSE  magic-filecache.cabal  setup_env.sh  stack.yaml
bench/: HSParse.hs  Main.hs
cnf-files/: cnf-files.cabal
cnf-files/cbits/: hs_mmap_at.c
cnf-files/include/: hs_mmap_at.h
cnf-files/src/Data/Compact/: Files.hs
dataload-bench/: dataload-bench.cabal
dataload-bench/src/: Main.hs
src/System/: MagicFileCache.hs
