name:                dataload-bench
version:             0.1.0.0
synopsis:  A benchmark concerned with loading background data.
-- description:
-- license:
license-file:        LICENSE
author:              Ryan Newton
maintainer:          rrnewton@gmail.com
build-type:          Simple
cabal-version:       >=1.10


flag debug
  description:         Dump debug information.
  default:             False
  manual:              True

-- The main criterion benchmark suite:
executable dataload-bench
  main-is:             Main.hs
  build-depends:
    base >=4.7 && <4.9,
    directory >= 1.0,
    filepath,
--    vector,
    array >= 0.5,
    containers >= 0.5,
    unix >= 2.7,
    deepseq >= 1.4,
    bench-utils,
    compact >= 1.0,
    time >= 1.0,
    -- binary >=0.7.1 && <0.7.3,
    bytestring,
    -- cereal >=0.4.1 && <0.4.2,
    -- criterion,
    -- deepseq,
    -- QuickCheck,
    -- random,
    -- text,
    -- text-binary,
    optparse-applicative >= 0.11

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -threaded -rtsopts 
-- -with-rtsopts="-xs1"

  c-sources:         cbits/hs_mmap_at.c
  include-dirs:      include
  includes:          hs_mmap_at.h
  install-includes:  hs_mmap_at.h
  
  if flag(debug)
    ghc-options: -debug -fno-omit-yields
    ghc-options: -ddump-core-stats -keep-tmp-files -dsuppress-module-prefixes -ddump-to-file -ddump-stg
  -- ghc-options: -ddump-simpl-stats -dcore-lint -dcmm-lint -ddump-ds -ddump-simpl -ddump-asm -ddump-bcos -ddump-cmm -ddump-opt-cmm -ddump-inlinings
